# namehold-wallet

./: .gitignore  CHANGELOG.md  README.md  REGTEST_TESTING.md  USER_MANUAL.md  index.html  job-logs.txt  package.json  pnpm-lock.yaml  secure.html  tsconfig.tsbuildinfo  vite.config.ts
docs/: NODE_SETUP.md  REGTEST_TESTING.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  secure.json
src-tauri/src/: error.rs  lib.rs  main.rs  wallet_delete.rs
src-tauri/src/commands/: assets.rs  batches.rs  csv.rs  mod.rs  namebase.rs  names.rs  node.rs  read.rs  secure_prompt.rs  secure_wallet.rs  settings.rs  sync.rs  tx.rs  wallet.rs
src-tauri/src/db/: connection.rs  migrations.rs  queries.rs
src-tauri/src/hsd/: client.rs  types.rs
src-tauri/src/models/: asset.rs  batch.rs  mod.rs  settings.rs
src-tauri/src/namebase/: client.rs
src-tauri/src/noncustodial/: actions.rs  address.rs  bids.rs  covenants.rs  derivation.rs  hd.rs  mod.rs  names.rs  network.rs  resource.rs  rpc.rs  send.rs  session.rs  sync.rs  tx.rs  types.rs  vault.rs
src-tauri/src/providers/: hnsfans.rs  mod.rs  resolver.rs  signer.rs  types.rs
src-tauri/src/sql/: 001_initial.sql  002_hsd_prefix.sql  003_provider_modes.sql  004_wallet_addresses.sql  005_fix_hnsfans_api_url.sql  006_noncustodial_wallet_profiles.sql  007_noncustodial_chain_cache.sql  008_noncustodial_name_state.sql  009_node_rpc_settings.sql  010_drop_legacy_settings.sql  011_hsd_data_dir.sql  012_tx_draft_confirmations.sql
src-tauri/src/tests/: assets_cmd_tests.rs  batches_cmd_tests.rs  command_helpers.rs  compare_inventory_tests.rs  csv_cmd_tests.rs  csv_extra_tests.rs  csv_import_tests.rs  csv_tests.rs  discover_names_tests.rs  hsd_client_tests.rs  hsd_extra_tests.rs  hsd_parity_tests.rs  hsd_types_tests.rs  live_node_it.rs  migration_tests.rs  mod.rs  namebase_transfer_tests.rs  node_status_tests.rs  provider_hnsfans_tests.rs  query_extra_tests.rs  query_tests.rs  read_cmd_tests.rs  read_profile_isolation_tests.rs  settings_cmd_tests.rs  settings_tests.rs  tx_lifecycle_tests.rs  wallet_delete_tests.rs
src-tauri/tests/vectors/: gen_hsd_vectors.js  package.json  vectors.json
(+92 files in other folders)
