[package]
name = "namehold-wallet"
version = "0.1.0"
edition = "2021"

[lib]
name = "namehold_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"

[dev-dependencies]
mockito = "1"
