[package]
name = "namehold-wallet"
version = "0.1.0"
edition = "2021"

[lib]
name = "namehold_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
dirs = "6"

# --- Non-custodial signing engine ---
# secp256k1 for ECDSA signing on the Handshake curve.
secp256k1 = { version = "0.29", features = ["rand", "global-context"] }
# BIP39 mnemonic <-> seed.
bip39 = "2"
# Hashing primitives used across HD derivation, address encoding, and sighash.
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
ripemd = "0.1"
blake2 = "0.10"
# Bech32 for Handshake (hs1...) address encoding.
bech32 = "0.11"
# Secret-at-rest encryption.
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
# Zeroize secrets in memory.
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
mockito = "1"
